--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --exec ts-node src/server.ts"
   },
   "keywords": [],
-  "author": "Vitor Nogueira",
+  "author": "Miguel Raatz",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.14",
